--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   dio: ^4.0.6
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
+  firebase_auth: ^3.3.19
+  firebase_core: ^1.17.1
 
 dev_dependencies:
   flutter_test:
